# markets

./: .editorconfig  Dockerfile  README.md  biz.zaxo.Markets.json  com.bitstower.Markets.json  config.vala.in  constants.vala.in  markets.doap  meson.build  uncrustify.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
data/: biz.zaxo.Markets.appdata.xml.in  biz.zaxo.Markets.desktop.in  biz.zaxo.Markets.gschema.xml  com.bitstower.Markets.appdata.xml.in  com.bitstower.Markets.desktop.in  com.bitstower.Markets.gschema.xml  meson.build  window.ui
data/icons/: meson.build
data/ui/: Application.css  DetailedHeaderBar.ui  DetailedView.ui  HeaderBar.ui  MainHeaderBar.ui  MainWindow.ui  NewSymbolDialog.ui  NoSymbolsView.ui  PreferencesWindow.ui  SelectionHeaderBar.ui  SymbolRow.ui  SymbolsView.ui  api_key_view.ui  markets.gresource.xml  menu.ui  meson.build  new_symbol.ui  preferences.ui  settings.ui  ui.gresource.xml  window.ui
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  README.md  biz.zaxo.Markets.pot  com.bitstower.Markets.pot  cs.po  de.po  en.po  es.po  eu.po  fr.po  gl.po  hr.po  id.po  it.po  ja.po  meson.build  nb_NO.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po
src/: Application.vala  DetailedHeaderBar.vala  DetailedView.vala  HeaderBar.vala  Main.vala  MainHeaderBar.vala  MainWindow.vala  Model.vala  NewSymbolDialog.vala  NoSymbolsView.vala  PreferencesWindow.vala  RestClient.vala  SelectionHeaderBar.vala  Service.vala  State.vala  Symbol.vala  SymbolRow.vala  SymbolsView.vala  Window.vala  api_key_view.ui  main.vala  markets.gresource.xml  menu.ui  meson.build  window.ui  window.vala
