install_data(
  app_id + '.svg',
  install_dir: join_paths(app_install_prefix, get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
  app_id + '-symbolic.svg',
  install_dir: join_paths(app_install_prefix, get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps'),
)


install_data(
  'open-symbolic.svg',
  install_dir: join_paths(app_install_prefix, get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions'),
)
